--- a/css/shared/_typography.scss
+++ b/css/shared/_typography.scss
@@ -25,6 +25,11 @@ h4{
     font-weight: 600;
 }
 
+h6{
+    font-size: 18px;
+    font-weight: 600;
+}
+
 .btn{
     border-radius: 0;
 }
@@ -52,8 +57,8 @@ h4{
     cursor: pointer;
     @extend .transition-all;
     &:hover{
-        background-color: $secondary;
-        color: white;
+        background-color: $secondary !important;
+        color: white !important;
     }
 }
 
