--- a/css/productLayout.scss
+++ b/css/productLayout.scss
@@ -46,7 +46,7 @@
         position: absolute;
         border: $default-border;
         border-radius: 0;
-        height: $product-card-height;
+        height: $product-card-height - 34px;
         overflow: hidden;
         @extend .transition-all;
         @include media-breakpoint-down(md) { 
@@ -108,6 +108,13 @@
             color: $color-link-hover;
         }
         .reviews{
+            height: 24px;
+            @include media-breakpoint-up(lg){
+                height: 48px;
+            }
+            @include media-breakpoint-up(xl){
+                height: 24px;
+            }
             .rating-stars{
                 i{
                     font-size: $font-small;
@@ -118,24 +125,61 @@
                 font-size: $font-small;
             }
         }
-        .price{
+        .price-bar{
+            display: flex;
+            justify-content: space-between;
             margin-top: 5px;
+            .default-price{
+                color: $color-dark-smoke; 
+                position: relative;
+                .line-through{
+                    height: 2px;
+                    width: 100%;
+                    background-color: $color-red;
+                    position: absolute;
+                    top: 10px;
+                    transform: rotate(-15deg);
+                }                 
+            }
+        }
+        .price{
             color: $secondary;
             font-weight: 700;
         }
+        .product-availability{
+            font-size: $font-small - 4;
+        }
+        .product-availability.available{
+            color: $color-availability;
+        }
+
         .product-info-list{
             display: none;
         }
         .visible{
-            height: $product-card-height - 22px;
+            height: $product-card-height - 60px;
             @include media-breakpoint-down(sm) { 
-                height: $product-card-height + 50px - 22px;
+                height: $product-card-height + 50px - 60px;
             }
         }
         .product-hidden-bar{
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
+            position: relative;
+            height: 70px;
+            .descript{
+                flex: 1 100%;
+                line-height: 1.4em;
+                max-height: 2.8em;
+                overflow: hidden;
+                font-size: $font-small;
+            }
+            .product-buy-bar{
+                position: absolute;
+                bottom: 0;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                width: 100%;
+            }
             .price{
                 display: none;
             }
@@ -245,6 +289,7 @@ $list-product-height: 200px;
 
                 .reviews{
                     margin-bottom: 10px;
+                    
                 }
             }
             
